--- a/ClientApp/components/topbar/topbar.css
+++ b/ClientApp/components/topbar/topbar.css
@@ -17,7 +17,7 @@
     .top-nav {
         width: 100%;
         height: 100px;
-        background: linear-gradient(to right, #8A6552, #FFE0B5);
+        background:  #8A6552;
         box-shadow: 0px 1px 10px #555;
         display: flex;
         flex-flow: row nowrap;
